--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,11 @@
   "name": "sistematickets-server",
   "version": "1.0.0",
   "type": "module",
-  "main": "app.js",
+  "main": "server.js",
   "engines": { "node": ">=18" },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
